--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.6",
+    "vue-chartjs": "^3.4.2",
     "vue-router": "^3.0.1",
     "vue-web3": "^2.1.0",
     "web3": "^1.0.0-beta.52"
